--- a/Marijeta_Jerkovic_zadatak10.html
+++ b/Marijeta_Jerkovic_zadatak10.html
@@ -12,7 +12,7 @@
 	 </a><br/>
 	 <a href="file:///C:/Users/Korisnik/OneDrive/Dokumenti/vje%C5%BEba1.html">Ovo je link na drugi html dokument
 	 </a><br/>
-	 <a href="file:///C:/Users/Korisnik/OneDrive/Dokumenti/Marijeta_Jerkovic_vje%C5%BEba10/dokumenti/Marijeta_Jerkovic_projektni_zadatak2.pdf">Ovo je pdf dokument
+	 <a href="file:///C:/Users/Korisnik/OneDrive/Dokumenti/Marijeta_Jerkovic_vje%C5%BEba10/dokumenti/Jerkovi%C4%87Marijetavje%C5%BEba3.pdf">Ovo je pdf dokument
 	 </a><br/>
 	<h2>O meni:</h2>
 	   <p><b><span style="color:red">Lorem Ipsum</b></span> has been the industry's <i>standard dummy text</i> ever since the <mark>1500s</mark>, when an unknown printer took a galley of type and scrambled it to make a <q>type specimen book</q>.
