--- a/Marijeta_Jerkovic_zadatak10.html
+++ b/Marijeta_Jerkovic_zadatak10.html
@@ -10,7 +10,7 @@
 	 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 	 <a href="https://www.lipsum.com/">Ovo je tekst linka na koji ću kliknuti
 	 </a><br/>
-	 <a href="file:///C:/Users/Korisnik/OneDrive/Dokumenti/vje%C5%BEba1.html">Ovo je link na drugi html dokument
+	 <a href="file:///C:/Users/Korisnik/OneDrive/Dokumenti/Marijeta_Jerkovic_vje%C5%BEba10/vje%C5%BEba1.html">Ovo je link na drugi html dokument
 	 </a><br/>
 	 <a href="file:///C:/Users/Korisnik/OneDrive/Dokumenti/Marijeta_Jerkovic_vje%C5%BEba10/dokumenti/Jerkovi%C4%87Marijetavje%C5%BEba3.pdf">Ovo je pdf dokument
 	 </a><br/>
