--- a/vježba1.html
+++ b/vježba1.html
@@ -11,7 +11,7 @@
 	<img src="C:\Users\Korisnik\OneDrive\Dokumenti\Marijeta_Jerkovic_vježba10\dokumenti\khao.jpg"/>
    <h1>Video</h1>
     <video width=““ height=““ controls>
-	<source src=“C:\Users\Korisnik\OneDrive\Dokumenti\Marijeta_Jerkovic_vježba10\dokumenti\Marijeta_Jerkovic_zadatak9.mp4" type="video/mp4"/>
+	<source src=“C:\Users\Korisnik\OneDrive\Dokumenti\Marijeta_Jerkovic_vježba10\dokumenti\moj_video.mp4" type="video/mp4"/>
     </video>
    <h1>Youtube video</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/40HWx_Uj_To?si=Ie_Zfp4E9Xqix_X0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
